xraylib/Acq.cs


        /* #ifdef _DLL_EXPORT
        #include "wpe200def.h"
        #else*/
        public enum WPE_ERR : int
        {
            OK = 0,  //!< No error
            ILLEGAL_BUFFER = -10000,//!< A buffer supplied is 0, or a buffer length to small
            JSON_PARSE = -10001,//!< Json parse error
            JSON_UNPACK = -10002,//!< Json unpack error
            SERVER_ERROR = -10003,//!< Web server error
            CURL_ERROR = -10004,//!< Error returned by the curl library
            NO_NET_ADAPTER = -10005,//!< No network adapters found
            ILLEGAL_PARAM = -10006,//!< Illegal parameter
            BASE64_ENCODE = -10007,//!< Error during base64 encoding
            FORCE_IP = -10008,//!< Error force IP
            NET_ADAPTER = -10009,//!< Error getting network adapters
            JSON_CREATE = -10010,//!< Json creation error
            PROPSTORE = -10011  //!< Error while using the PropertyStore
        }


        /**
         * The device info
         *
         */
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        struct deviceInfo
        {
            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string device_version;             //!< The device version

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string spec_version;               //!< GigE vision spec version

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string manufacturer_name;          //!< The manufactures name

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string model_name;                 //!< The model name

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string serial_number;              //!< The serial number

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 48)]
            string manufacturer_specific;      //!< Some manufacture info

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string user_name;                  //!< Device specific
        }


        /**
         * The network information
         *
         */
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        struct networkInfo
        {
            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string ip;        //!< The IP (v4) address as string

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string mask;      //!< The IP mask as string

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string broadcast; //!< The IP broadcast as string

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 18)]
            string mac;       //!< The MAC address as string    
        }


        /**
        * Information about a single discovery Reply network packet
        *
*/
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        struct discoveryReplyMsg
        {
            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string remote_ip;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string local_ip;
        }


        /**
        * The original discovery reply
        *
*/
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        struct discoveryReply
        {
            deviceInfo deviceInfo; //!< The device information
            networkInfo lanInfo;   //!< The LAN network setup
            networkInfo wlanInfo;  //!< The WLAN network setup

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string gvcp_ip;             //!< Which IP address is used for image transfer
        }


        /**
        * The extended discovery reply
        * Can carry additional information
*/
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        struct discoveryReplyEx
        {
            deviceInfo deviceInfo;   //!< The device information
            networkInfo lanInfo;     //!< The LAN network setup
            networkInfo wlanInfo;    //!< The WLAN network setup


            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
            string gvcp_ip;               //!< Which IP address is used for image transfer

            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
            discoveryReplyMsg[] messages; //!< Info about the received reply packets
            uint messageCount;          //!< How many messages this reply carries
        };

        /**
        * Structure for holding the adapter
        * part of a configuration
        *
        *
*/

        
        // See: https://stackoverflow.com/questions/5235445/pinvoke-c-function-takes-pointer-to-function-as-argument

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void EndFrameCallback(IntPtr pAcqDesc);
        
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void EndAcqCallback(IntPtr pAcqDesc);


        [DllImport("XISL.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        public static extern HIS_RETURN Acquisition_SetCallbacksAndMessages(IntPtr pAcqDesc,
                      HandleRef hWnd,
                      uint dwErrorMsg, uint dwLoosingFramesMsg,
                      [MarshalAs(UnmanagedType.FunctionPtr)]EndFrameCallback lpfnEndFrameCallback,
                      [MarshalAs(UnmanagedType.FunctionPtr)]EndAcqCallback lpfnEndAcqCallback
                      );

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_EnumSensors(ref uint pdwNumSensors, bool bEnableIRQ, bool bAlwaysOpen);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_GetNextSensor(ref IntPtr Pos, IntPtr phAcqDesc);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_GetCommChannel(IntPtr pAcqDesc, ref uint pdwChannelType, ref int pnChannelNr);
        
        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_DefineDestBuffers(IntPtr pAcqDesc, IntPtr pProcessedData, uint nFrames, uint nRows, uint nColumns);
        

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Acquire_Image(IntPtr pAcqDesc, uint dwFrames, uint dwSkipFrms, HIS_SEQ dwOpt, [In] ushort[] pwOffsetData, [In] uint[] pdwGainData, [In] int[] pdwPxlCorrList);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Acquire_Image_Ex(IntPtr hAcqDesc, uint dwFrames, uint dwSkipFrms, uint dwOpt,
                                              ref ushort pwOffsetData, uint dwGainFrames, ref ushort pwGainData,
                                              ref ushort pwGainAvgData, ref uint pdwGainData, ref uint pdwPxlCorrList);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Abort(IntPtr hAcqDesc);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_SetFPGACameraMode(IntPtr hAcqDesc, FPGAType FPGACommand, bool bInverse);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_SetCameraMode(IntPtr hAcqDesc, uint dwMode);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Acquire_OffsetImage(IntPtr hAcqDesc, IntPtr pOffsetData, uint nRows, uint nCols, uint nFrames);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Acquire_OffsetImage_Ex(IntPtr hAcqDesc, IntPtr pOffsetData, uint nRows, uint nCols, uint nFrames, uint dwOpt);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Acquire_GainImage(IntPtr hAcqDesc, IntPtr pOffsetData, IntPtr pGainData, uint nRows, uint nCols, uint nFrames);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Acquire_GainImage_Ex(IntPtr hAcqDesc, IntPtr pOffsetData, IntPtr pGainData, uint nRows, uint nCols, uint nFrames, uint dwOpt);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_CreateGainMap(ref ushort pGainData, ref ushort pGainAVG, int nCount, int nFrame);
        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_CreatePixelMap([In] ushort[] pData, uint nDataRows, uint nDataColumns, [In, Out] int[] pCorrList, ref uint nCorrListSize);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DoOffsetCorrection(ushort* pSource, ushort* pDest, ushort* pOffsetData, int nCount);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DoOffsetGainCorrection(ushort* pSource, ushort* pDest, ushort* pOffsetData, uint* pGainData, int nCount);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DoOffsetGainCorrection_Ex(ushort* pSource, ushort* pDest, ushort* pOffsetData, ushort* pGainData,
        //                                                                    ushort* pGainAVG, int nCount, int nFrame);  //	19.09.02


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DoOffsetCorrection32(unsigned long* pSource, unsigned long* pDest, unsigned long* pOffsetData, int nCount); // val 20070124

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DoOffsetGainCorrection32(unsigned long* pSource, unsigned long* pDest, unsigned long* pOffsetData, unsigned long* pGainData, int nCount);// val 20070124

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DoOffsetGainCorrection_Ex32(unsigned long* pSource, unsigned long* pDest, unsigned long* pOffsetData, unsigned long* pGainData,
        //                                    unsigned long* pGainAVG, int nCount, int nFrame); // val 20070124

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_CreateGainMap32(unsigned long* pGainData, unsigned long* pGainAVG, int nCount, int nFrame);



        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DoPixelCorrection(ushort* pData, int* pCorrList);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_IsAcquiringData(IntPtr hAcqDesc);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_Close(IntPtr hAcqDesc);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_CloseAll();

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_SetReady(IntPtr hAcqDesc, bool ready);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_GetReady(IntPtr hAcqDesc);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetErrorCode(IntPtr hAcqDesc, uint* dwHISError, uint* dwBoardError);
